--- a/style.css
+++ b/style.css
@@ -35,11 +35,11 @@ section{
     padding: 0 80px;
     margin: auto;
 }
-.about, .services, .skills, .projects, .contact, footer{
+.about, .certificate, .skills, .projects, .contact, footer{
     font-family: 'Poppins', sans-serif;
 }
 .about .about-content,
-.services .serv-content,
+.certificate .serv-content,
 .skills .skills-content,
 .contact .contact-content{
     display: flex;
@@ -257,21 +257,21 @@ section .title::after{
     background: none;
 }
 
-/* services section styling */
-.services, .projects{
+/* certificate section styling */
+.certificate, .projects{
     color:#fff;
     background: #111;
 }
-.services .title::before,
+.certificate .title::before,
 .projects .title::before{
     background: #fff;
 }
-.services .title::after,
+.certificate .title::after,
 .projects .title::after{
     background: #111;
     content: "Certified";
 }
-.services .serv-content .card{
+.certificate .serv-content .card{
     width: calc(33% - 20px);
     background: #222;
     text-align: center;
@@ -280,24 +280,24 @@ section .title::after{
     cursor: pointer;
     transition: all 0.3s ease;
 }
-.services .serv-content .card:hover{
+.certificate .serv-content .card:hover{
     background: crimson;
 }
-.services .serv-content .card .box{
+.certificate .serv-content .card .box{
     transition: all 0.3s ease;
 }
-.services .serv-content .card:hover .box{
+.certificate .serv-content .card:hover .box{
     transform: scale(1.05);
 }
-.services .serv-content .card i{
+.certificate .serv-content .card i{
     font-size: 50px;
     color: crimson;
     transition: color 0.3s ease;
 }
-.services .serv-content .card:hover i{
+.certificate .serv-content .card:hover i{
     color: #fff;
 }
-.services .serv-content .card .text{
+.certificate .serv-content .card .text{
     font-size: 25px;
     font-weight: 500;
     margin: 10px 0 7px 0;
@@ -696,7 +696,7 @@ footer {
     .about .about-content .right{
         flex: 100%;
     }
-    .services .serv-content .card{
+    .certificate .serv-content .card{
         width: calc(50% - 10px);
         margin-bottom: 20px;
     }
@@ -720,7 +720,7 @@ footer {
     .home .home-content a{
         font-size: 20px;
     }
-    .services .serv-content .card{
+    .certificate .serv-content .card{
         width: 100%;
     }
 }
